# Train-Batch-Data-Pipeline

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start-all.sh  stop-all.sh
airflow/dags/: train_pipeline.py
airflow/variables/: variables.json
config/: pipeline-config.yaml
docker/airflow/: docker-compose.override.yaml  docker-compose.yaml
docker/hadoop/: docker-compose.yaml
docker/mongo/: docker-compose.yaml
docker/mongo/init/: init.js
docker/nessie/: docker-compose.yaml
docker/spark/: docker-compose.yaml  dockerfile.jupyter.notebook  dockerfile.spark.submit  spark-defaults.conf
src/app/: __init__.py  run_bootstrap.py  run_pipeline.py
src/app/bootstrap/: __init__.py  init_nessie.py  init_schema.py
src/core/: __init__.py  config.py  constant.py  logger.py  registry.py  session.py
src/core/config/: __init__.py  config.py
src/data_quality/: __init__.py  base_checks.py  base_test.py  technical_cheks.py
src/data_quality/bronze/: bronze_dq.py  test_bronze.py
src/data_quality/silver/: test_passengers.py  test_routes.py  test_stations.py  test_tickets.py  test_trains.py
src/etl/extract/: __init__.py  base_extract.py  iceberg_extract.py  mongo_extract.py
src/etl/load/: __init__.py  base_load.py  iceberg_load.py
src/etl/transform/: __init__.py  base_transform.py
src/models/: base_config.py  checks_config.py  data_config.py  pipeline_config.py  spark_config.py
src/notebooks/: Testes.ipynb
src/utils/: data_cleaning_utils.py  filter_utils.py  nessie_utils.py  table_utils.py  text_utils.py
(+26 files in other folders)
