[project]
name = "train-batch-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7,<4.0"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.5.3",
    "pyspark==3.2.1",
    "python-dotenv>=0.21.1",
    "pyyaml>=6.0.1",
    "typing-extensions>=4.7.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["airflow*", "docker*", "*.egg-info", ""]



[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "I",      # isort
    "N",      # pep8-naming
    "S",      # flake8-bandit
    "PT",     # flake8-pytest-style
]

ignore = ["N812", "UP035"]
